--- a/style.css
+++ b/style.css
@@ -810,6 +810,10 @@ video {
   margin-top: 0.5rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -2909,552 +2913,6 @@ video {
   forced-color-adjust: none;
 }
 
-/* @media screen and (max-width: 425px) and (orientation: portrait) {
-
-    #container{
-        flex-direction: column-reverse;
-        overflow: hidden;
-        padding: 0;
-        column-gap: 0;
-        row-gap: 10px;
-    }
-
-    #worker-list{
-        width: 100%;
-    }
-
-    #plan{
-        margin-top: 20px;
-        width: 95%;
-        height: 45vh;
-        padding-block: 0;
-    }
-
-    .add-worker-btn{
-        width: 2vh;
-        height: 2vh;
-        font-size: 10px;
-        border-radius: 5px;
-    }
-
-    .rooms{
-        row-gap: 15px;
-        column-gap: 5px;
-    }
-
-    #add-worker-modal .modal,
-    #edit-worker-modal .modal,
-    #worker-profile-modal .modal,
-    #available-workers-list .modal{
-        width: 95%;
-        height: 90vh;
-    }
-
-    #delete-worker-modal .modal{
-        width: 95%;
-        height: 50vh;
-    }
-
-    #worker-profile-modal .modal .row{
-        flex-direction: column;
-        column-gap: 0;
-        row-gap: 8px;
-    }
-
-    #worker-profile-modal .modal img{
-        width: 10vh;
-        height: 10vh;
-    }
-
-    #worker-profile-modal .modal .name{
-        font-size: 1.2rem;
-    }
-
-    #worker-profile-modal .modal .age-role{
-        font-size: 1rem;
-    }
-
-    .room-worker{
-        width: 5vh;
-        height: 2vh;
-        border-radius: 2px;
-        padding: 1px;
-    }
-
-    .room-worker img{
-        width: 1vh;
-        height: 1vh;
-    }
-
-    .room-worker p{
-        font-size: .2rem;
-    }
-
-    .room-worker .remove-btn{
-        width: 1vh;
-        height: 1vh;
-        border-radius: 2px;
-        font-size: .5rem;
-    }
-}
-
-@media screen and (max-width: 800px) and (orientation: landscape) {
-
-    #container{
-        overflow: hidden;
-        padding: 0;
-    }
-
-    #worker-list{
-        width: 30%;
-    }
-
-    #worker-list h1{
-        font-size: 1.5rem;
-    }
-
-    #worker-list button{
-        font-size: .8rem;
-        padding-block: 8px;
-    }
-
-    #worker-list .worker{
-        height: 12vh;
-    }
-
-    #worker-list .worker img{
-        width: 6vh;
-        height: 6vh;
-    }
-
-    #worker-list .worker .name{
-        font-size: .8rem;
-    }
-
-    #worker-list .worker .role{
-        font-size: .6rem;
-    }
-
-    #worker-list .worker .close{
-        width: 3vh;
-        height: 3vh;
-        font-size: 10px;
-        border-radius: 5px;
-    }
-
-    #worker-list .worker .edit{
-        width: 7vh;
-        height: 3vh;
-        font-size: 8px;
-        border-radius: 3px;
-    }
-
-    #plan{
-        width: 65%;
-        height: 65vh;
-        padding-block: 0;
-    }
-
-    .add-worker-btn{
-        width: 4vh;
-        height: 4vh;
-        font-size: 16px;
-        border-radius: 5px;
-    }
-
-    .rooms{
-        row-gap: 15px;
-        column-gap: 5px;
-    }
-
-    #add-worker-modal .modal,
-    #edit-worker-modal .modal,
-    #worker-profile-modal .modal,
-    #available-workers-list .modal{
-        width: 95%;
-        height: 90vh;
-    }
-
-    #add-worker-form{
-        height: 50vh;
-    }
-
-    #delete-worker-modal .modal{
-        width: 95%;
-        height: 80vh;
-    }
-
-    #edit-worker-form{
-        height: 50vh;
-    }
-
-    #worker-profile-modal .modal .name{
-        font-size: 1.2rem;
-    }
-
-    #worker-profile-modal .modal .age-role{
-        font-size: 1rem;
-    }
-
-    .room-worker{
-        width: 12vh;
-        height: 4vh;
-        border-radius: 5px;
-        padding: 1px;
-    }
-
-    .room-worker img{
-        width: 2.5vh;
-        height: 2.5vh;
-    }
-
-    .room-worker p{
-        font-size: .5rem;
-    }
-
-    .room-worker .remove-btn{
-        width: 2vh;
-        height: 2vh;
-        border-radius: 2px;
-        font-size: .6rem;
-    }
-}
-
-@media screen and (min-width: 426px) and (max-width: 768px) and (orientation: portrait) {
-
-    #container{
-        flex-direction: column-reverse;
-        overflow: hidden;
-        padding: 0;
-        column-gap: 0;
-        row-gap: 10px;
-    }
-
-    #worker-list{
-        width: 100%;
-    }
-
-    #worker-list .worker{
-        height: 15vh;
-    }
-
-    #plan{
-        margin-top: 20px;
-        width: 75%;
-        height: 90vh;
-        padding-block: 0;
-    }
-
-    .add-worker-btn{
-        width: 2vh;
-        height: 2vh;
-        font-size: 10px;
-        border-radius: 5px;
-    }
-
-    .rooms{
-        gap: 20px;
-    }
-
-    #add-worker-modal .modal,
-    #edit-worker-modal .modal,
-    #worker-profile-modal .modal,
-    #available-workers-list .modal{
-        width: 95%;
-        height: 90vh;
-    }
-
-    #delete-worker-modal .modal{
-        width: 95%;
-        height: 50vh;
-    }
-
-    .room-worker{
-        width: 5vh;
-        height: 2vh;
-        border-radius: 2px;
-        padding: 1px;
-    }
-
-    .room-worker img{
-        width: 1vh;
-        height: 1vh;
-    }
-
-    .room-worker p{
-        font-size: .2rem;
-    }
-
-    .room-worker .remove-btn{
-        width: 1vh;
-        height: 1vh;
-        border-radius: 2px;
-        font-size: .5rem;
-    }
-}
-
-@media screen and (min-height: 768px) and (max-height: 1024px) and (orientation: landscape) {
-
-    #container{
-        overflow: hidden;
-        padding: 0;
-    }
-
-    #worker-list{
-        width: 30%;
-    }
-
-    #worker-list h1{
-        font-size: 1.5rem;
-    }
-
-    #worker-list button{
-        font-size: .8rem;
-        padding-block: 8px;
-    }
-
-    #worker-list .worker{
-        height: 12vh;
-    }
-
-    #worker-list .worker img{
-        width: 6vh;
-        height: 6vh;
-    }
-
-    #worker-list .worker .name{
-        font-size: .8rem;
-    }
-
-    #worker-list .worker .role{
-        font-size: .6rem;
-    }
-
-    #worker-list .worker .close{
-        top: 2px;
-        right: 2px;
-        width: 2vh;
-        height: 2vh;
-        font-size: 10px;
-        border-radius: 5px;
-    }
-
-    #worker-list .worker .edit{
-        width: 5vh;
-        height: 2vh;
-        font-size: 8px;
-        border-radius: 3px;
-    }
-
-    #plan{
-        width: 65%;
-        height: 40vh;
-        padding-block: 0;
-        transform: rotate(90deg) scaleX(1.3) scaleY(1.6);
-    }
-
-    .add-worker-btn{
-        width: 2vh;
-        height: 1.5vh;
-        font-size: 10px;
-        border-radius: 3px;
-    }
-
-    .rooms{
-        row-gap: 15px;
-        column-gap: 5px;
-    }
-
-    #add-worker-modal .modal,
-    #worker-profile-modal .modal,
-    #available-workers-list .modal,
-    #edit-worker-modal .modal{
-        width: 95%;
-        height: 90vh;
-    }
-
-    #add-worker-form{
-        height: 65vh;
-    }
-
-    #delete-worker-modal .modal{
-        width: 95%;
-        height: 70vh;
-    }
-
-    #edit-worker-form{
-        height: 65vh;
-    }
-
-    #worker-profile-modal .modal .name{
-        font-size: 1.2rem;
-    }
-
-    #worker-profile-modal .modal .age-role{
-        font-size: 1rem;
-    }
-
-    .room-worker{
-        width: 8vh;
-        height: 3vh;
-        border-radius: 3px;
-        padding: 1px;
-    }
-
-    .room-worker img{
-        width: 2vh;
-        height: 1.5vh;
-    }
-
-    .room-worker p{
-        font-size: .4rem;
-    }
-
-    .room-worker .remove-btn{
-        width: 1vh;
-        height: 1vh;
-        border-radius: 2px;
-        font-size: .4rem;
-    }
-}
-
-@media screen and (min-width: 769px) and (max-width: 1024px){
-
-    #container{
-        overflow: hidden;
-        padding: 0;
-    }
-
-    #worker-list{
-        width: 30%;
-    }
-
-    #worker-list h1{
-        font-size: 1.5rem;
-    }
-
-    #worker-list button{
-        font-size: .8rem;
-        padding-block: 8px;
-    }
-
-    #worker-list .worker{
-        height: 12vh;
-    }
-
-    #worker-list .worker img{
-        width: 6vh;
-        height: 6vh;
-    }
-
-    #worker-list .worker .name{
-        font-size: .8rem;
-    }
-
-    #worker-list .worker .role{
-        font-size: .6rem;
-    }
-
-    #worker-list .worker .close{
-        top: 2px;
-        right: 2px;
-        width: 2vh;
-        height: 2vh;
-        font-size: 10px;
-        border-radius: 5px;
-    }
-
-    #worker-list .worker .edit{
-        width: 5vh;
-        height: 2vh;
-        font-size: 8px;
-        border-radius: 3px;
-    }
-
-    #plan{
-        width: 50%;
-        height: 40vh;
-        padding-block: 0;
-        transform: rotate(90deg) scaleX(1.3) scaleY(1.6);
-    }
-
-    .add-worker-btn{
-        width: 2vh;
-        height: 1.5vh;
-        font-size: 10px;
-        border-radius: 3px;
-    }
-
-    .rooms{
-        row-gap: 15px;
-        column-gap: 5px;
-    }
-
-    #add-worker-modal .modal{
-        width: 95%;
-        height: 90vh;
-    }
-
-    #add-worker-form{
-        height: 65vh;
-    }
-
-    #delete-worker-modal .modal{
-        width: 65%;
-        height: 50vh;
-    }
-
-    #edit-worker-modal .modal{
-        width: 95%;
-        height: 90vh;
-    }
-
-    #edit-worker-form{
-        height: 65vh;
-    }
-
-    #worker-profile-modal .modal{
-        width: 95%;
-        height: 90vh;
-    }
-
-    #available-workers-list .modal{
-        width: 95%;
-        height: 90vh;
-    }
-
-    #worker-profile-modal .modal .name{
-        font-size: 1.2rem;
-    }
-
-    #worker-profile-modal .modal .age-role{
-        font-size: 1rem;
-    }
-
-    .room-worker{
-        width: 7vh;
-        height: 2.5vh;
-        border-radius: 3px;
-        padding: 1px;
-    }
-
-    .room-worker img{
-        width: 2vh;
-        height: 1.5vh;
-    }
-
-    .room-worker p{
-        font-size: .4rem;
-    }
-
-    .room-worker .remove-btn{
-        width: 1vh;
-        height: 1vh;
-        border-radius: 2px;
-        font-size: .4rem;
-    }
-} */
-
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
@@ -3634,32 +3092,8 @@ video {
     width: 3vh;
   }
 
-  .md\:w-\[\] {
-    width: ;
-  }
-
-  .md\:w-\[90\%\] {
-    width: 90%;
-  }
-
-  .md\:w-\[80\%\] {
-    width: 80%;
-  }
-
-  .md\:w-\[70\%\] {
-    width: 70%;
-  }
-
   .md\:w-\[75\%\] {
     width: 75%;
-  }
-
-  .md\:w-\[20\%\] {
-    width: 20%;
-  }
-
-  .md\:w-\[30\%\] {
-    width: 30%;
   }
 
   .md\:flex-row {
@@ -3679,13 +3113,13 @@ video {
          column-gap: 0.5rem;
   }
 
-  .md\:gap-y-0 {
-    row-gap: 0px;
-  }
-
   .md\:gap-x-5 {
     -moz-column-gap: 1.25rem;
          column-gap: 1.25rem;
+  }
+
+  .md\:gap-y-0 {
+    row-gap: 0px;
   }
 
   .md\:rounded-\[4px\] {
@@ -3731,44 +3165,36 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:h-\[9vh\] {
-    height: 9vh;
-  }
-
-  .lg\:h-\[\] {
-    height: ;
-  }
-
-  .lg\:h-\[80vh\] {
-    height: 80vh;
+  .lg\:mt-0 {
+    margin-top: 0px;
   }
 
   .lg\:h-\[50vh\] {
     height: 50vh;
   }
 
-  .lg\:w-\[30\%\] {
-    width: 30%;
+  .lg\:h-\[9vh\] {
+    height: 9vh;
   }
 
   .lg\:w-10\/12 {
     width: 83.333333%;
   }
 
-  .lg\:w-\[\] {
-    width: ;
+  .lg\:w-\[30\%\] {
+    width: 30%;
   }
 
   .lg\:w-\[45\%\] {
     width: 45%;
   }
 
-  .lg\:w-\[70\%\] {
-    width: 70%;
-  }
-
   .lg\:w-\[60\%\] {
     width: 60%;
+  }
+
+  .lg\:w-\[70\%\] {
+    width: 70%;
   }
 
   .lg\:flex-row {
@@ -3791,11 +3217,6 @@ video {
   .lg\:px-2 {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
-  }
-
-  .lg\:px-1 {
-    padding-left: 0.25rem;
-    padding-right: 0.25rem;
   }
 }
 
@@ -3863,24 +3284,16 @@ video {
     height: 70vh;
   }
 
+  .xl\:h-\[85vh\] {
+    height: 85vh;
+  }
+
   .xl\:h-\[8vh\] {
     height: 8vh;
   }
 
   .xl\:h-\[90vh\] {
     height: 90vh;
-  }
-
-  .xl\:h-\[9vh\] {
-    height: 9vh;
-  }
-
-  .xl\:h-\[80vh\] {
-    height: 80vh;
-  }
-
-  .xl\:h-\[85vh\] {
-    height: 85vh;
   }
 
   .xl\:w-1\/2 {
@@ -3891,16 +3304,8 @@ video {
     width: 33.333333%;
   }
 
-  .xl\:w-10\/12 {
-    width: 83.333333%;
-  }
-
   .xl\:w-\[15vh\] {
     width: 15vh;
-  }
-
-  .xl\:w-\[20\%\] {
-    width: 20%;
   }
 
   .xl\:w-\[25\%\] {
@@ -3911,6 +3316,10 @@ video {
     width: 2vh;
   }
 
+  .xl\:w-\[48\%\] {
+    width: 48%;
+  }
+
   .xl\:w-\[5vh\] {
     width: 5vh;
   }
@@ -3919,50 +3328,16 @@ video {
     width: 70%;
   }
 
-  .xl\:w-\[80\%\] {
-    width: 80%;
+  .xl\:w-\[75\%\] {
+    width: 75%;
   }
 
   .xl\:w-\[8vh\] {
     width: 8vh;
   }
 
-  .xl\:w-\[\] {
-    width: ;
-  }
-
-  .xl\:w-\[48\%\] {
-    width: 48%;
-  }
-
-  .xl\:w-\[75\%\] {
-    width: 75%;
-  }
-
-  .xl\:flex-row {
-    flex-direction: row;
-  }
-
-  .xl\:items-center {
-    align-items: center;
-  }
-
-  .xl\:justify-center {
-    justify-content: center;
-  }
-
   .xl\:gap-10 {
     gap: 2.5rem;
-  }
-
-  .xl\:gap-x-3 {
-    -moz-column-gap: 0.75rem;
-         column-gap: 0.75rem;
-  }
-
-  .xl\:gap-x-5 {
-    -moz-column-gap: 1.25rem;
-         column-gap: 1.25rem;
   }
 
   .xl\:rounded-lg {
@@ -3999,10 +3374,6 @@ video {
   .xl\:py-4 {
     padding-top: 1rem;
     padding-bottom: 1rem;
-  }
-
-  .xl\:pe-5 {
-    padding-inline-end: 1.25rem;
   }
 
   .xl\:text-\[\.8rem\] {
