--- a/styles/style.css
+++ b/styles/style.css
@@ -2171,7 +2171,7 @@ video {
 }
 
 .bg-plan {
-  background-image: url('./images/plan.jpg');
+  background-image: url('../images/plan.jpg');
 }
 
 .decoration-slice {
