--- a/styles/input.css
+++ b/styles/input.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+*::-webkit-scrollbar{
+    width: 5px;
+    height: 5px;
+}
+*::-webkit-scrollbar-track{
+    background-color: transparent;
+}
+*::-webkit-scrollbar-thumb{
+    background-color: #888;
+    border-radius: 10px;
+}
