--- a/styles/style.css
+++ b/styles/style.css
@@ -949,6 +949,10 @@ video {
   height: 30vh;
 }
 
+.h-\[50vh\] {
+  height: 50vh;
+}
+
 .h-\[5vh\] {
   height: 5vh;
 }
@@ -2913,6 +2917,20 @@ video {
   forced-color-adjust: none;
 }
 
+*::-webkit-scrollbar{
+  width: 5px;
+  height: 5px;
+}
+
+*::-webkit-scrollbar-track{
+  background-color: transparent;
+}
+
+*::-webkit-scrollbar-thumb{
+  background-color: #888;
+  border-radius: 10px;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
@@ -3012,6 +3030,14 @@ video {
 
   .sm\:h-\[3vh\] {
     height: 3vh;
+  }
+
+  .sm\:h-\[40vh\] {
+    height: 40vh;
+  }
+
+  .sm\:h-\[60vh\] {
+    height: 60vh;
   }
 
   .sm\:h-\[8vh\] {
@@ -3278,6 +3304,10 @@ video {
 
   .xl\:h-\[5vh\] {
     height: 5vh;
+  }
+
+  .xl\:h-\[60vh\] {
+    height: 60vh;
   }
 
   .xl\:h-\[70vh\] {
