--- a/styles/input.css
+++ b/styles/input.css
@@ -11,6 +11,6 @@
     background-color: transparent;
 }
 *::-webkit-scrollbar-thumb{
-    background-color: #888;
+    background-color: #3A3A3A;
     border-radius: 10px;
 }
