--- a/styles/style.css
+++ b/styles/style.css
@@ -877,10 +877,6 @@ video {
   width: 100vw;
 }
 
-.w-1\/2{
-  width: 50%;
-}
-
 .flex-shrink-0{
   flex-shrink: 0;
 }
@@ -1049,6 +1045,11 @@ video {
   border-color: rgb(100 116 139 / var(--tw-border-opacity, 1));
 }
 
+.bg-\[\#021a2f\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 26 47 / var(--tw-bg-opacity, 1));
+}
+
 .bg-black{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
@@ -1084,15 +1085,6 @@ video {
   background-color: rgb(212 160 23 / var(--tw-bg-opacity, 1));
 }
 
-.bg-\[\]{
-  background-color: ;
-}
-
-.bg-\[\#021a2f\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(2 26 47 / var(--tw-bg-opacity, 1));
-}
-
 .bg-opacity-30{
   --tw-bg-opacity: 0.3;
 }
@@ -1102,7 +1094,7 @@ video {
 }
 
 .bg-plan{
-  background-image: url('../images/plan.png');
+  background-image: url('../images/plan.webp');
 }
 
 .bg-contain{
@@ -1499,10 +1491,6 @@ video {
 
   .md\:h-\[unset\]{
     height: unset;
-  }
-
-  .md\:h-\[10vh\]{
-    height: 10vh;
   }
 
   .md\:w-7\/12{
